# layout-categories

./: README.md  categories.py  layout_utils.py  notebook.ipynb  requirements.txt  sandbox.py  test-utils.py  test_utils.py  tests.py
tract/: README.md  pyproject.toml
tract/examples/: example_notebook.ipynb  new_notebook.ipynb  notebook.ipynb
tract/src/tract/: __init__.py  categories.py  layout_utils.py  test_utils.py  tuple_morph_tikz.py
tract/src/tract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tract/tests/: morphism_tests.py
